plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group 'io.github.vqnxiv'
version '0.1'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.1'
}

sourceCompatibility = "17.PREVIEW"
targetCompatibility = "17.PREVIEW"

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

application {
    mainModule = 'io.github.vqnxiv.taquin'
    mainClass = 'io.github.vqnxiv.taquin.Taquin'
}

javafx {
    version = '17-ea+11'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    
    implementation 'org.reflections:reflections:0.10.2'
    implementation 'org.jfxtras:jmetro:11.6.15'
}

test {
    useJUnitPlatform()
}